--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div align = "center" class="nav-footer">
-    <a href="https://rtask.thinkr.fr"><h4>ThinkR is a french compagny of R experts.</h4></a>
+    <a href="https://rtask.thinkr.fr"><h4>ThinkR is a french company of R experts.</h4></a>
     <p>Find us on the web:</p>
     <a href="https://rtask.thinkr.fr"> <i class="fa fa-link fa-2x"></i> </a>
     <a href="https://twitter.com/thinkr_fr"> <i class="fab fa-twitter fa-2x"></i> </a>
